# opentimelineio-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  USAGE.md  build.rs
.github/workflows/: test.yml
examples/: builder.rs  dummy.rs  iterate.rs  modify.rs  stack_demo.rs
scripts/: check_memory.sh  valgrind.supp
shim/: CMakeLists.txt  otio_shim.cpp  otio_shim.h  otio_shim_macros.h
src/: builders.rs  effect.rs  error.rs  generator_reference.rs  image_sequence_reference.rs  iterators.rs  lib.rs  macros.rs  marker.rs  missing_reference.rs  time_effect.rs  traits.rs  transition.rs  types.rs
tests/: builders.rs  error_handling.rs  extended_features.rs  helpers.rs  iteration.rs  memory.rs  metadata.rs  modify_operations.rs  nested.rs  new_features.rs  new_types.rs  roundtrip.rs  timeline_iteration.rs
tests/fixtures/: simple_timeline.otio
